force-app/main/default/objects/Order/fields/Advance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment__c</fullName>
    <label>Advance Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>