force-app/main/default/objects/Order/fields/Any_Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Information__c</fullName>
    <inlineHelpText>If it’s a Swarovski order, you will want to enter their GSK #.</inlineHelpText>
    <label>Any Other Information</label>
    <type>TextArea</type>
</CustomField>