force-app/main/default/objects/Order/fields/AVA_SFCLOUD__Commit_Tax__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Commit_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, performs the automatic tax calculation and passes the document as &quot;Committed&quot; on the AvaTax.</description>
    <inlineHelpText>If checked, performs the automatic tax calculation and passes the document as &quot;Committed&quot; on the AvaTax.</inlineHelpText>
    <label>Commit Tax</label>
    <type>Checkbox</type>
</CustomField>