force-app/main/default/objects/Order/fields/AVA_SFCLOUD__Invoice_Message__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Invoice_Message__c</fullName>
    <description>This field is used to display the invoicing messages for VAT functionality.</description>
    <inlineHelpText>This field is used to display the invoicing messages for VAT functionality.</inlineHelpText>
    <label>Invoice Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>