force-app/main/default/objects/Order/fields/AVA_SFCLOUD__Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Sales_Tax__c</fullName>
    <description>Displays the tax amount calculated by AvaTax.</description>
    <inlineHelpText>Displays the tax amount calculated by AvaTax.</inlineHelpText>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>