force-app/main/default/objects/Order/fields/AVA_SFCLOUD__ShippingHandling__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__ShippingHandling__c</fullName>
    <description>Enter the amount for the Shipping and Handling.</description>
    <inlineHelpText>Enter the amount for the Shipping and Handling.</inlineHelpText>
    <label>Shipping and Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>