force-app/main/default/objects/Order/fields/CatalogRequestedfromStorefront__c.field-meta.xml
<CustomField>
    <fullName>CatalogRequestedfromStorefront__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CatalogRequestedfromStorefront</label>
    <type>Checkbox</type>
</CustomField>