force-app/main/default/objects/Order/fields/Comment_from_the_Customer__c.field-meta.xml
<CustomField>
    <fullName>Comment_from_the_Customer__c</fullName>
    <inlineHelpText>Comment that the customer is aware that the Order cannot be Cancelled, Refunded, or Returned.</inlineHelpText>
    <label>Comment from the Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>