force-app/main/default/objects/Order/fields/CreditAppliedAmt__c.field-meta.xml
<CustomField>
    <fullName>CreditAppliedAmt__c</fullName>
    <label>Credit Applied Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>