force-app/main/default/objects/Order/fields/Customer_s_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Account_Number__c</fullName>
    <label>Customer’s Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>