force-app/main/default/objects/Order/fields/Customer_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Name__c</fullName>
    <label>Customer’s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>