force-app/main/default/objects/Order/fields/Customer_s_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Order_Number__c</fullName>
    <label>Customer’s Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>