force-app/main/default/objects/Order/fields/Customer_s_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Phone_Number__c</fullName>
    <label>Customer’s Phone Number</label>
    <type>Phone</type>
</CustomField>