force-app/main/default/objects/Order/fields/Customer_Status2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status2__c</fullName>
    <formula>TEXT(Account.Customer_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>