force-app/main/default/objects/Order/fields/Date_Needed_by__c.field-meta.xml
<CustomField>
    <fullName>Date_Needed_by__c</fullName>
    <label>Date Needed by</label>
    <type>Date</type>
</CustomField>