force-app/main/default/objects/Order/fields/Discount_Level__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level__c</fullName>
    <label>Discount Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>