force-app/main/default/objects/Order/fields/Gift_Certificate_Amount_del__c.field-meta.xml
<CustomField>
    <fullName>Gift_Certificate_Amount_del__c</fullName>
    <label>Gift Certificate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>