force-app/main/default/objects/Order/fields/Gift_Certification_Applied__c.field-meta.xml
<CustomField>
    <fullName>Gift_Certification_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Certification Applied</label>
    <type>Checkbox</type>
</CustomField>