force-app/main/default/objects/Order/fields/GSK_Customer__c.field-meta.xml
<CustomField>
    <fullName>GSK_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GSK Customer</label>
    <type>Checkbox</type>
</CustomField>