force-app/main/default/objects/Order/fields/InsuranceAnt__c.field-meta.xml
<CustomField>
    <fullName>InsuranceAnt__c</fullName>
    <label>Insurance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>