force-app/main/default/objects/Order/fields/Is_Special_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special Order?</label>
    <type>Checkbox</type>
</CustomField>