force-app/main/default/objects/Order/fields/isCorrectionOrder__c.field-meta.xml
<CustomField>
    <fullName>isCorrectionOrder__c</fullName>
    <label>Correction Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>