force-app/main/default/objects/Order/fields/LegacyCustNo__c.field-meta.xml
<CustomField>
    <fullName>LegacyCustNo__c</fullName>
    <formula>Account.Legacy_Customer_Number__c</formula>
    <label>Legacy Customer Number</label>
    <type>Text</type>
</CustomField>