force-app/main/default/objects/Order/fields/No_Gift_Products__c.field-meta.xml
<CustomField>
    <fullName>No_Gift_Products__c</fullName>
    <label>No. Gift Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>