force-app/main/default/objects/Order/fields/No_of_Order_Summaries__c.field-meta.xml
<CustomField>
    <fullName>No_of_Order_Summaries__c</fullName>
    <label>No. of Order Summaries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>