force-app/main/default/objects/Order/fields/No_of_Total_Products__c.field-meta.xml
<CustomField>
    <fullName>No_of_Total_Products__c</fullName>
    <label>No. of Total Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>