force-app/main/default/objects/Order/fields/noCatalogInOrder__c.field-meta.xml
<CustomField>
    <fullName>noCatalogInOrder__c</fullName>
    <label>No Catalog in Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>