force-app/main/default/objects/Order/fields/openAccountChequeNumber__c.field-meta.xml
<CustomField>
    <fullName>openAccountChequeNumber__c</fullName>
    <label>OpenAccountChequeNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>