force-app/main/default/objects/Order/fields/openAccountCredit__c.field-meta.xml
<CustomField>
    <fullName>openAccountCredit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OpenAccountCredit</label>
    <type>Checkbox</type>
</CustomField>