force-app/main/default/objects/Order/fields/Order_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping_Method__c</fullName>
    <label>Order Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BW</fullName>
                <label>Best Way</label>
            </value>
            <value>
                <fullName>UPS</fullName>
                <label>UPS Ground</label>
            </value>
            <value>
                <fullName>FXG</fullName>
                <label>FedEx Ground</label>
            </value>
            <value>
                <fullName>USPSEM</fullName>
                <label>USPS Express Mail</label>
            </value>
            <value>
                <fullName>USPSPM</fullName>
                <label>USPS Priority Mail</label>
            </value>
            <value>
                <fullName>USPSFCM</fullName>
                <label>USPS First Class</label>
            </value>
            <value>
                <fullName>FXES</fullName>
                <label>FedEx Express Saver</label>
            </value>
            <value>
                <fullName>UP2</fullName>
                <label>UPS 2nd Day Air</label>
            </value>
            <value>
                <fullName>FEX</fullName>
                <label>FedEx 2 Day Air</label>
            </value>
            <value>
                <fullName>UPAS</fullName>
                <label>UPS Next Day Air Saver</label>
            </value>
            <value>
                <fullName>UPO</fullName>
                <label>UPS Next Day Air</label>
            </value>
            <value>
                <fullName>FXP</fullName>
                <label>FedEx Priority Overnight</label>
            </value>
            <value>
                <fullName>INBW</fullName>
                <label>Best Way International</label>
            </value>
            <value>
                <fullName>UPWEXS</fullName>
                <label>UPS International</label>
            </value>
            <value>
                <fullName>FXIE</fullName>
                <label>FedEx International Economy</label>
            </value>
            <value>
                <fullName>FXIP</fullName>
                <label>FedEx International Priority</label>
            </value>
            <value>
                <fullName>USPSGPM</fullName>
                <label>USPS Global Priority Mail</label>
            </value>
            <value>
                <fullName>PUD</fullName>
                <label>Pick Up At Door</label>
            </value>
            <value>
                <fullName>2-Day Express</fullName>
                <isActive>false</isActive>
                <label>2-Day Express</label>
            </value>
            <value>
                <fullName>Express</fullName>
                <isActive>false</isActive>
                <label>Express</label>
            </value>
            <value>
                <fullName>EUR001</fullName>
                <isActive>false</isActive>
                <label>Ground</label>
            </value>
            <value>
                <fullName>Store Pickup</fullName>
                <isActive>false</isActive>
                <label>Store Pickup</label>
            </value>
            <value>
                <fullName>Test Special Order shipping</fullName>
                <isActive>false</isActive>
                <label>Test Special Order shipping</label>
            </value>
            <value>
                <fullName>USPS</fullName>
                <isActive>false</isActive>
                <label>USPS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>