force-app/main/default/objects/Order/fields/OrderActions__c.field-meta.xml
<CustomField>
    <fullName>OrderActions__c</fullName>
    <label>Order Actions</label>
    <type>DateTime</type>
</CustomField>