force-app/main/default/objects/Order/fields/OrderComment__c.field-meta.xml
<CustomField>
    <fullName>OrderComment__c</fullName>
    <label>Order Comment</label>
    <type>TextArea</type>
</CustomField>