force-app/main/default/objects/Order/fields/OrderTime__c.field-meta.xml
<CustomField>
    <fullName>OrderTime__c</fullName>
    <label>Order Time</label>
    <type>Time</type>
</CustomField>