force-app/main/default/objects/Order/fields/Pay_Method_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Pay_Method_Expiration__c</fullName>
    <label>Pay Method Expiration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>