force-app/main/default/objects/Order/fields/PayMethodExpiration__c.field-meta.xml
<CustomField>
    <fullName>PayMethodExpiration__c</fullName>
    <label>Pay Method Expiration</label>
    <type>Date</type>
</CustomField>