force-app/main/default/objects/Order/fields/PostageAmt__c.field-meta.xml
<CustomField>
    <fullName>PostageAmt__c</fullName>
    <label>Postage Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>