force-app/main/default/objects/Order/fields/Related_Orders_under_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Orders_under_Contact__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Orders under Contact</label>
    <type>Text</type>
</CustomField>