force-app/main/default/objects/Order/fields/SalesTax__c.field-meta.xml
<CustomField>
    <fullName>SalesTax__c</fullName>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>