force-app/main/default/objects/Order/fields/ShipMethod__c.field-meta.xml
<CustomField>
    <fullName>ShipMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship Method</label>
    <referenceTo>OrderDeliveryMethod</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>