force-app/main/default/objects/Order/fields/ShippingTotalAmt__c.field-meta.xml
<CustomField>
    <fullName>ShippingTotalAmt__c</fullName>
    <label>Shipping Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>