force-app/main/default/objects/Order/fields/ShipWeight__c.field-meta.xml
<CustomField>
    <fullName>ShipWeight__c</fullName>
    <label>Ship Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>