force-app/main/default/objects/Order/fields/signatureRequired__c.field-meta.xml
<CustomField>
    <fullName>signatureRequired__c</fullName>
    <label>signatureRequired</label>
    <length>30</length>
    <type>Text</type>
</CustomField>