force-app/main/default/objects/Order/fields/Special_Order_number__c.field-meta.xml
<CustomField>
    <fullName>Special_Order_number__c</fullName>
    <displayFormat>RS{00000000}</displayFormat>
    <label>Special Order number</label>
    <type>AutoNumber</type>
</CustomField>