force-app/main/default/objects/Order/fields/Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating__c</fullName>
    <label>Star Rating</label>
    <length>18</length>
    <type>Text</type>
</CustomField>