force-app/main/default/objects/Order/fields/SurCharge__c.field-meta.xml
<CustomField>
    <fullName>SurCharge__c</fullName>
    <label>SurCharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>