force-app/main/default/objects/Order/fields/ThirdPartyCarrierAccountBilling__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyCarrierAccountBilling__c</fullName>
    <label>Third Party Carrier Account Billing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>