force-app/main/default/objects/Order/fields/Total_Amount_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_with_Tax__c</fullName>
    <formula>TotalAmount  +  AVA_SFCLOUD__Sales_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount with Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>