force-app/main/default/objects/Order/recordTypes/Normal_Order.recordType-meta.xml
<RecordType>
    <fullName>Normal_Order</fullName>
    <active>true</active>
    <label>Normal Order</label>
</RecordType>