force-app/main/default/objects/Order/recordTypes/Special_Order.recordType-meta.xml
<RecordType>
    <fullName>Special_Order</fullName>
    <active>true</active>
    <label>Special Order</label>
</RecordType>