force-app/main/default/objects/Order/validationRules/Order_Activated.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Activated</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Status , &quot;Activated&quot;) &amp;&amp;  RecordType.Name  = &quot;Special Order&quot;</errorConditionFormula>
    <errorMessage>Order cannot be Changed once Activated</errorMessage>
</ValidationRule>