force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDER.ORDER_REFERENCE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_s_Name__c</field>
        <operation>equals</operation>
        <value>SAEMEE YOUN</value>
    </filters>
    <label>All Orders</label>
</ListView>